# frp-icecast2-source

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main  main.c
doc/: High level design.drawio  Thread diagram.drawio
sqlite/: CMakeLists.txt
src/: main.c  main.cpp  streamer.cpp  streamer.h
src/streamer/: streamer.cpp  streamer.h
